fix grid alignment

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -11,7 +11,7 @@ html {
   display: grid;
   grid-template-columns: 175px 175px;
   gap: 50px 0;
-  padding: 20px 10px 0 10px;
+  padding: 20px 0 0 0;
 }
 
 .app-label {
